Fixed spacing between buttons | Added reload to delete button

--- a/frontend/src/app/user-form/user-form.component.css
+++ b/frontend/src/app/user-form/user-form.component.css
@@ -12,3 +12,7 @@ label {
   position: relative;
   margin-top: 0ex;
 }
+
+button {
+  margin-left: 1em;
+}
