--- a/frontend/src/app/view-page/view-page.component.css
+++ b/frontend/src/app/view-page/view-page.component.css
@@ -6,3 +6,11 @@
   margin-left: -3px;
   top: 0;
 }
+
+a {
+  margin-right: 1em;
+}
+
+button {
+  margin-right: 1em;
+}
